integrity test